AIAI-200 Image/Text/File Input for Agents
- FileExtractor: accept InputStream + fileName instead of File
- QueryExpander: Support Path and IvyFile types as file expressions
- Update TestFileExtractor, TestFileExtractionDemo
- Create new test file TestQueryExpander for QueryExpander